Fixed alignment on bank page

--- a/app/app/styles/bank.less
+++ b/app/app/styles/bank.less
@@ -15,7 +15,7 @@
   padding-left: 100px;
   padding-top: 100px;
   padding-bottom: 100px;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
 }
 
 .icon-large {
@@ -53,16 +53,26 @@
   background-size: 100%;
   padding-left: 60px;
   padding-right: 60px;
+
   padding-top: 60px;
   padding-bottom: 180px;
   margin-top: 20px;
 }
 
-.logo {
+/*.logo {
   padding-top: 20px;
   display: block;
 }
-
+*/
 .nav-row {
   padding-top: 10px;
+  padding-bottom: 20px;
+  ul li img {
+    height: 100%;
+  }
+  ul {
+    li {
+      vertical-align: bottom;
+    }
+  }
 }
